--- a/media.css
+++ b/media.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
   }
   #contact,
-  #projects {
+  #projects, #about, #experience {
     height: fit-content;
   }
 }
@@ -47,6 +47,7 @@
       margin-top: 0;
     }
   }
+  
   
   @media screen and (max-width: 600px) {
     #contact,
